# quadrotor-artag-navigation

./: .gitignore  README.md  README.mkd  movequad.sh
QuadrotorCommander/: .project  AndroidManifest.xml
QuadrotorCommander/res/layout/: activity_choice.xml  activity_main.xml  activity_speech.xml
QuadrotorCommander/res/values/: strings.xml
QuadrotorCommander/src/lcmtypes/: Speech.java  SpeechList.java  TextToSpeechMsg.java
docs/: elective.tex  vocal.tex
docs/slide/videos/: noise1.mpeg  noise2.mpeg  nonoise.mpeg
elective/: stack.xml
elective/docs/: appendix.tex  biblio.bib  elective.tex  hovering.tex  intro.tex  navigation.tex  simulation.tex  vocal.tex
elective/gazebo_camera_test/: mainpage.dox  manifest.xml
elective/gazebo_camera_test/Media/: 1.material  15.material  15S.material  40S.material  53.material  53S.material  74.material  74S.material  artag.material  pippo.material
elective/gazebo_camera_test/data/: multi
elective/gazebo_camera_test/launch/: empty_camera.launch  full.launch  labrob_quad_baseFuerte_multi.launch  labrob_quad_baseFuerte_single.launch  lcm.sh  quad_path.launch  quad_path_noise.launch  test.launch  test_tag.launch
elective/gazebo_camera_test/urdf/: ARtag2.urdf  ARtag4.urdf  ARtag4S.urdf  ARtag5.urdf  ARtag6.urdf  ARtag6S.urdf  ARtag7.urdf  ARtag7S.urdf  ARtag8.urdf  ARtagS.urdf  scatola.urdf.xacro
elective/plot/: plot.py
elective/quadrotor_artag_simulation/: manifest.xml
elective/speech_msgs/: mainpage.dox  manifest.xml
elective/tablet_broker/: mainpage.dox  manifest.xml
elective/usb_camera_test/: mainpage.dox  manifest.xml
labrob_ros_quadrotor/: stack.xml
labrob_ros_quadrotor/labrob_hummingbird_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
labrob_ros_quadrotor/labrob_quad_gazebo/: CMakeLists.txt  manifest.xml
labrob_ros_quadrotor/labrob_quadrotor_sensors/: CMakeLists.txt  mainpage.dox  manifest.xml
labrob_ros_quadrotor/labrob_quadrotor_sensors/buildFiles/: CMakeFindROSVersion.cmake
labrob_ros_quadrotor/labrob_quadrotor_sensors/include/labrob_quadrotor_sensors/: labrob_gazebo_IMU.h  labrob_gazebo_IMUFuerte.h  labrob_gazebo_camera.h  labrob_gazebo_cameraFuerte.h  labrob_gazebo_camera_utilsFuerte.h  labrob_gazebo_sonarFuerte.h  labrob_sonar_controller.h  sensorIMUSonarModel.h  setBias.h
labrob_ros_quadrotor/labrob_quadrotor_sensors/src/: labrob_gazebo_IMU.cpp  labrob_gazebo_IMUFuerte.cpp  labrob_gazebo_camera.cpp  labrob_gazebo_cameraFuerte.cpp  labrob_gazebo_camera_utilsFuerte.cpp  labrob_gazebo_sonarFuerte.cpp  labrob_sonar_controller.cpp
plot/: plot.py
quad_speech_control/: mainpage.dox  manifest.xml
quad_speech_control/LCMServer/: LCMServer.java
quad_speech_control/data/: gold_corpus.txt  quad_corpus.txt  quad_corpus_bu.txt
quad_speech_control/src/: bag_of_words.py  controller.py
(+66 files in other folders)
